# PyColor

./: .gitignore  README.md  color.py  pyproject.toml
.github/workflows/: python-publish.yml
PyColor/: LICENCE  README.md  pyproject.toml
PyColor/src/PyColor/: color.py
PyColor/src/PyColor-v1/: color.py
