[tool.poetry]
name = "color-python-module-package"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "color_python_module_package"}]

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "68.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
